# EventBus

./: CMakeLists.txt
include/: Event.h  IEventHandler.h
include/manager/: EventManager.h  IEventManager.h
src/: Event.cpp
src/manager/: EventManager.cpp
tests/: CMakeLists.txt  InitListenner.cpp  InitListenner.h  TestListener.cpp  TestListener.h  main.cpp
